log
Thu 05 Oct 2023 12:58:36 PM UTC: 
 tests:  0|5
total_score: 0/70
cf635dc
Thu 05 Oct 2023 01:12:44 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:5: error: ‘num’ undeclared (first use in this function)
   57 |     num=1;
      |     ^~~
sudoku.c:57:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ff0b4c6
Thu 05 Oct 2023 01:12:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
903f985
Thu 05 Oct 2023 01:20:40 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|3
total_score: 35/70
f810cf2
Thu 05 Oct 2023 01:32:21 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:69:7: error: ‘casillaC’ undeclared (first use in this function)
   69 |       casillaC=n->sudo[j][i];
      |       ^~~~~~~~
sudoku.c:69:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:67:9: error: variable ‘arreglo’ set but not used [-Werror=unused-but-set-variable]
   67 |     int arreglo[10] = {0};
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f43e5fd
Thu 05 Oct 2023 01:43:41 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:69:7: error: ‘casillaC’ undeclared (first use in this function)
   69 |       casillaC=n->sudo[j][i];
      |       ^~~~~~~~
sudoku.c:69:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:67:9: error: variable ‘arreglo’ set but not used [-Werror=unused-but-set-variable]
   67 |     int arreglo[10] = {0};
      |         ^~~~~~~
sudoku.c:84:10: error: ‘j’ undeclared (first use in this function)
   84 |     for (j=0; j<9 ; j++){
      |          ^
cc1: all warnings being treated as errors
Compilation failed
69cc7ae
